recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:11: error: not found: value levels
	if (levels == 0){triangle(length)}
            ^Sierpinski:13: error: not found: value levels
		sierpinski(levels-1, length/2)
                           ^