recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def triangle(length:Double){
	avance(length)
	gauche(120)
	avance(length)
	gauche(120)
	avance(length)
	gauche(120)
}


def sierpinski(level:Int, length:Double) {
	if (levels == 0){triangle(length)}
	else {
		sierpinski(levels-1, length/2)
		
	}
	
}
